--- a/Dockerfile.python
+++ b/Dockerfile.python
@@ -1,10 +1,17 @@
-FROM python:3.12-slim
+FROM python:3.11-slim
 
-#  Ваш код здесь #
 WORKDIR /app
+
 COPY requirements.txt .
-RUN pip install -r requirements.txt
+RUN pip install --no-cache-dir -r requirements.txt
+
 COPY . .
 
-# Запускаем приложение с помощью uvicorn, делая его доступным по сети
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "5000"]
+# Устанавливаем dockerize
+RUN apt update && apt install -y wget && \
+    wget https://github.com/jwilder/dockerize/releases/download/v0.6.1/dockerize-linux-amd64-v0.6.1.tar.gz && \
+    tar -C /usr/local/bin -xzvf dockerize-linux-amd64-v0.6.1.tar.gz && \
+    rm dockerize-linux-amd64-v0.6.1.tar.gz
+
+# Ждём MySQL на порту 3306 и запускаем приложение
+CMD ["dockerize", "-wait", "tcp://db:3306", "-timeout", "30s", "uvicorn", "main:app", "--host", "0.0.0.0", "--port", "5000"]
