--- a/compose.yaml
+++ b/compose.yaml
@@ -11,12 +11,11 @@ services:
       backend:
         ipv4_address: 172.20.0.5
     environment:
-      MYSQL_DATABASE: ${MYSQL_DATABASE}
-      MYSQL_USER: ${MYSQL_USER}
-      MYSQL_PASSWORD: ${MYSQL_PASSWORD}
       DB_HOST: db
       DB_PORT: 3306
-
+      DB_NAME: ${MYSQL_DATABASE}
+      DB_USER: ${MYSQL_USER}
+      DB_PASSWORD: ${MYSQL_PASSWORD}
   db:
     image: mysql:8
     restart: always
